finished all groups!!!!!!

--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -280,7 +280,7 @@
         </ion-list>
     </div>
 
-    <div id="9">
+    <div id="g9">
         <h3 class="center">
             Deine Tutoren der Gruppe 9:
         </h3>
@@ -340,6 +340,470 @@
             <ion-item class="center">
                 <b>Marc Weimann: </b>
                 <a href="tel:+49-157-38923106">+49 157 38923106</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g11">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 11:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Finn von Lauppert: </b>
+                <a href="tel:+49-163-7835433">+49 163 7835433</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Leon Buermeyer: </b>
+                <a href="tel:+49-172-3186907">+49 172 3186907</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Miro Weißenberg: </b>
+                <a href="tel:+49-157-79439028">+49 157 79439028</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Linda Günder: </b>
+                <a href="tel:+49-176-80466622">+49 176 80466622</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Caro Schwarz: </b>
+                <a href="tel:+49-174-4060030">+49 174 4060030</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Eva Donnermayer: </b>
+                <a href="tel:+49-157-79242936">+49 157 79242936</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g12">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 12:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Anni Becker: </b>
+                <a href="tel:+49-157-55884545">+49 157 55884545</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Manuel Katholnigg: </b>
+                <a href="tel:+49-157-55884545">+49 157 55884545</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Rica Schäfer: </b>
+                <a href="tel:+49-157-35476240">+49 157 35476240</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Niklas Harwig: </b>
+                <a href="tel:+49-157-36128032">+49 157 36128032</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Maximilian Volk: </b>
+                <a href="tel:+49-160-7068201">+49 160 7068201</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Jan Senger: </b>
+                <a href="tel:+49-174-9493665">+49 174 9493665</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g13">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 13:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Dominik Neller: </b>
+                <a href="tel:+49-157-54330901">+49 157 54330901</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Andrea Schiffer: </b>
+                <a href="tel:+49-176-20312231">+49 176 20312231</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Artur Romanenko: </b>
+                <a href="tel:+49-151-17681316">+49 151 17681316</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Sören Braner: </b>
+                <a href="tel:+49-157-71265292">+49 157 71265292</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Julian Duffner: </b>
+                <a href="tel:+49-171-5635831">+49 171 5635831</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Maarten Dohrwardt: </b>
+                <a href="tel:+49-152-56134468">+49 152 56134468</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g14">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 14:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Stefan Stumpf: </b>
+                <a href="tel:+49-176-53864876">+49 176 53864872</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Jan Deininger: </b>
+                <a href="tel:+49-176-81566488">+49 176 81566488</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Fabian Schroth: </b>
+                <a href="tel:+49-173-8046957">49 173 8046957</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Joshua Weide: </b>
+                <a href="tel:+49-152-26894073">+49 152 26894073</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Valentin Woesler: </b>
+                <a href="tel:+49-176-79564906">+49 176 79564906</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Elif Kilinc: </b>
+                <a href="tel:+49-162-8572660">+49 162 8572660</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g15">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 15:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Leonie Roos: </b>
+                <a href="tel:+49-157-89041956">+49 157 89041956</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Lara Wittstock: </b>
+                <a href="tel:+49-157-89054447">+49 157 89054447</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Moritz Diener: </b>
+                <a href="tel:+49-152-23621115">+49 152 23621115</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Paul Worrach: </b>
+                <a href="tel:+49-152-34514183">+49 152 34514183</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Niklas Thier: </b>
+                <a href="tel:+49-174-8418504">+49 174 8418504</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Nico Klees: </b>
+                <a href="tel:+49-172-6561244">+49 172 6561244</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g16">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 16:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Leonie Rübenacker: </b>
+                <a href="tel:+49-163-2121460">+49 163 2121460</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Claudius Schack: </b>
+                <a href="tel:+49-176-45726430">+49 176 45726430</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Leon Wingenfeld aka Ein-Bier-Leon: </b>
+                <a href="tel:+49-160-2705911">+49 160 2705911</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Roman Schluck: </b>
+                <a href="tel:+49-176-42484718">+49 176 42484718</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Laura Selgrad: </b>
+                <a href="tel:+49-176-50945729">+49 176 50945729</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g17">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 17:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Mera Grebe: </b>
+                <a href="tel:+49-157-88041894">+49 157 88041894</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Theresa Schmutz: </b>
+                <a href="tel:+49-163-1747917">+49 163 1747917</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Philipp Kataliakos: </b>
+                <a href="tel:+49-176-99065569">+49 176 99065569</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Yannick Knieling: </b>
+                <a href="tel:+49-176-84664983">+49 176 84664983</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Oliver Beer: </b>
+                <a href="tel:+49-160-4491574">+49 160 4491574</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Nora Derner: </b>
+                <a href="tel:+49-172-7147595">+49 172 7147595</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g18">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 18:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Hendrik Baden: </b>
+                <a href="tel:+49-151-51742805">+49 151 51742805</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Tobias Kiesner: </b>
+                <a href="tel:+49-159-02169979">+49 159 02169979</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Lorenz Bielefeld: </b>
+                <a href="tel:+49-152-25484489">+49 152 25484489</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Josephine Wirth: </b>
+                <a href="tel:+49-151-16889834">+49 151 16889834</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Carissima Pietsch: </b>
+                <a href="tel:+49-152-34389949">+49 152 34389949</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g19">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 19:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Lea Michels: </b>
+                <a href="tel:+49-157-75077379">+49 157 75077379</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Marie Thederan: </b>
+                <a href="tel:+49-151-40172350">+49 151 40172350</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Lennart Riep: </b>
+                <a href="tel:+49-157-76488938">+49 157 76488938</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Luka Wolf: </b>
+                <a href="tel:+49-152-59515519">+49 152 59515519</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Florian Kaltwasser: </b>
+                <a href="tel:+49-160-99834893">+49 160 99834893</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Patrick Hecht: </b>
+                <a href="tel:+49-151-46402100">+49 151 46402100</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g20">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 20:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Magdalena Geib: </b>
+                <a href="tel:+49-157-50339645">+49 157 50339645</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Luisa Klingels: </b>
+                <a href="tel:+49-151-61442497">+49 151 61442497</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Johannes Loy: </b>
+                <a href="tel:+49-176-53842393">+49 176 53842393</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Michael Seitz: </b>
+                <a href="tel:+49-157-52591074">+49 157 52591074</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Simon Kaps: </b>
+                <a href="tel:+49-176-45973765">+49 176 45973765</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g21">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 21:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Lotta Schlau: </b>
+                <a href="tel:+49-157-31669509">+49 157 31669509</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Nick Reiter: </b>
+                <a href="tel:+49-151-57323041">+49 151 57323041</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Fabian Feiland: </b>
+                <a href="tel:+49-151-75072382">+49 151 75072382</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Ingo Hartmann: </b>
+                <a href="tel:+49-174-2894372">+49 174 2894372</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Max Kirsch: </b>
+                <a href="tel:+49-157-34899627">+49 157 34899627</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Marie Joachimsmeier: </b>
+                <a href="tel:+49-173-2776502">+49 173 2776502</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g22">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 22:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Karim Jaga: </b>
+                <a href="tel:+49-176-56729722">+49 176 56729722</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Ali Ekin Durusoy: </b>
+                <a href="tel:+49-152-33571368">+49 152 33571368</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Andrew Voß: </b>
+                <a href="tel:+49-152-34206161">+49 152 34206161</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Armin Saberi: </b>
+                <a href="tel:+49-176-72608772">+49 176 72608772</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Vincent Kohl: </b>
+                <a href="tel:+49-160-93271110">+49 160 93271110</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Ebru Koschubat: </b>
+                <a href="tel:+49-174-9898279">+49 174 9898279</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g23">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 23:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Benedikt Wörz: </b>
+                <a href="tel:+49-175-8135608">+49 175 8135608</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Luis Herr: </b>
+                <a href="tel:+49-157-79625007">+49 157 79625007</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Enrico Stolz: </b>
+                <a href="tel:+49-151-41865122">+49 151 41865122</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Elena Fantino: </b>
+                <a href="tel:+39-3201549185">+39 3201549185</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Caroline Kutscher: </b>
+                <a href="tel:+49-157-32538863">+49 157 32538863</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Andreas Schuler: </b>
+                <a href="tel:+49-157-81743449">+49 157 81743449</a>
+            </ion-item>
+        </ion-list>
+    </div>
+
+    <div id="g24">
+        <h3 class="center">
+            Deine Tutoren der Gruppe 24:
+        </h3>
+        <img src="assets/imgs/logo.png" style="border:3px solid #1985ff">
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Luca Heuser: </b>
+                <a href="tel:+49-176-64420894">+49 176 64420894</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Marcel Pflugfelder: </b>
+                <a href="tel:+49-157-58809081">+49 157 58809081</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Christoph Kohn: </b>
+                <a href="tel:+49-151-56600508">+49 151 56600508</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Jonas Mayer: </b>
+                <a href="tel:+49-157-88796318">+49 157 88796318</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Marie Morgenroth: </b>
+                <a href="tel:+49-176-45943200">+49 176 45943200</a>
+            </ion-item>
+            <ion-item class="center">
+                <b>Lea Weber: </b>
+                <a href="tel:+49-176-45655413">+49 176 45655413</a>
             </ion-item>
         </ion-list>
     </div>
