(ugly) icon added, small change to push notifications, version 0.0.4

--- a/src/pages/news-feed/news-feed.html
+++ b/src/pages/news-feed/news-feed.html
@@ -2,7 +2,8 @@
 
     <ion-navbar class="title">
         <ion-title>
-            <ion-icon name="beer"></ion-icon>&nbsp;&nbsp;KroKo-Phase</ion-title>
+            <img src="assets/icon/krokoicon.png" height="40"/> &nbsp;&nbsp;KroKo-Phase
+        </ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="openMap()">
                 <ion-icon name="compass"></ion-icon>
