--- a/src/pages/graphs/graphs.html
+++ b/src/pages/graphs/graphs.html
@@ -29,11 +29,9 @@
 
 <ion-content padding>
 
-    <ion-card>
-        <iframe width="600" height="400" src="https://live.amcharts.com/QzOTg/embed/" frameborder="0"></iframe>
-    </ion-card>
+   
 
-    <iframe width="600" height="400" src="https://live.amcharts.com/QzOTg/embed/" frameborder="0"></iframe>
+    <iframe width="100%" height="250" src="https://live.amcharts.com/QzOTg/embed/" frameborder="0"></iframe>
 
   <div>
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS-I3fxec0yXV4CCyJM6owVTvZaGKz6BZlb-rLakvm15Uvwf73UtW2sBwa1cbKB_7IGIlU9dcILOMrN/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"
