--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -16,9 +16,7 @@
 </ion-header>
 <ion-content padding>
 
-    <div>
-        <h6> -----------------Wochenplan und Events----------</h6>
-    </div>
+
 
 
 
@@ -26,7 +24,19 @@
 
 
     <ion-card>
-        <img src="assets/imgs/fixed/wochenplan.jpg" height="300" />
+        <img src="assets/imgs/events/wochenplan.jpg" height="300" />
+    </ion-card>
+
+    <ion-card>
+        <img src="assets/imgs/events/3.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                Begrüßung
+            </ion-card-title>
+            <p>
+                The most popular industrial group ever, and largely responsible for bringing the alcohol to a mass audience.
+            </p>
+        </ion-card-content>
     </ion-card>
 
 
@@ -55,6 +65,27 @@
         </ion-card-content>
     </ion-card>
 
+
+    <ion-card>
+        <img src="assets/imgs/events/3.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                Clubs 
+
+            </ion-card-title>
+            <p>#bisderschweißvonderdecketropft</p>
+
+            <ul>
+                <li>Montag: Agostea</li>
+                <li>Mittwoch: Cen Club</li>
+                <li>Donnerstag: Überraschung!</li>
+                <li>Freitag: Kroko-Keller!</li>
+                <li>Smastag: GaHa-Party</li>
+                
+            </ul>
+
+        </ion-card-content>
+    </ion-card>
 
 
 
