--- a/src/pages/news-feed/news-feed.html
+++ b/src/pages/news-feed/news-feed.html
@@ -2,7 +2,7 @@
 
     <ion-navbar class="title">
         <ion-title>
-            <img src="assets/icon/krokoicon.png" height="40"/> &nbsp;&nbsp;KroKo-Phase
+            &nbsp;&nbsp;KroKo-Phase
         </ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="openMap()">
