--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -27,17 +27,6 @@
         <img src="assets/imgs/events/wochenplan.jpg" height="300" />
     </ion-card>
 
-    <ion-card>
-        <img src="assets/imgs/events/3.jpg" />
-        <ion-card-content>
-            <ion-card-title>
-                Begrüßung
-            </ion-card-title>
-            <p>
-                The most popular industrial group ever, and largely responsible for bringing the alcohol to a mass audience.
-            </p>
-        </ion-card-content>
-    </ion-card>
 
 
 
@@ -70,7 +59,7 @@
         <img src="assets/imgs/events/2.jpg" />
         <ion-card-content>
             <ion-card-title>
-                Clubs 
+                Clubs
 
             </ion-card-title>
             <p>#bisderschweißvonderdecketropft</p>
@@ -81,110 +70,195 @@
                 <li>Donnerstag: Überraschung!</li>
                 <li>Freitag: Kroko-Keller!</li>
                 <li>Smastag: GaHa-Party</li>
-                
+
             </ul>
 
         </ion-card-content>
     </ion-card>
 
 
+    <ion-card>
+        <img src="assets/imgs/events/breakfast.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                Gruppenfrühstück
 
-    <div class="list">
-        <div class="item item-text-wrap">
-            <h3>Kneipenbesuch</h3>
-            <p>Hier lernt ihr eure Gruppe noch einmal in einer angenehmen Atmosphäre kennen und dann gehts ab! #pöbelnnichtvergessen</p>
-        </div>
-
-        <div class="item item-text-wrap">
-            <h3>Clubs</h3>
-            <p>#bisderschweißvonderdecketropft</p>
-            <ul>
-                <li>Montag: Agostea</li>
-                <li>Mittwoch: Cen Club</li>
-                <li>Freitag: BaSta-Party</li>
-                <li>Samstag: Überraschung!</li>
-            </ul>
-        </div>
-
-        <div class="item item-text-wrap">
-            <h3>Gruppenfrühstück</h3>
+            </ion-card-title>
             <p>Kater? bestimmt nicht, Du hast doch sicher nie aufgehört zu feiern und zu trinken! Pünktlichkeit ist Pflicht.</p>
-        </div>
 
-        <div class="item item-text-wrap">
-            <h3>SchloGa-Rallye</h3>
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+        <img src="assets/imgs/events/schloss.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                Schloga SchloGa-Rallye
+
+            </ion-card-title>
             <p>Falls ihr euch fragt, wir haben die Veranstaltung angemeldet! Vieleicht nicht alle Stationen detailliert... aber
-                angemeldet.</p>
-        </div>
+                angemeldet.
+            </p>
 
-        <div class="item item-text-wrap">
-            <h3>Karaoke</h3>
+        </ion-card-content>
+    </ion-card>
+
+
+    <ion-card>
+        <img src="assets/imgs/events/question.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                Karaoke
+
+            </ion-card-title>
             <p>Schon viele bekannte Künstler wie Thom Barron sind am KIT zu festen größen im Business geworden. Du bist dafür
                 sicher auch ein heißer Kandidat!</p>
-        </div>
 
-        <div class="item item-text-wrap">
-            <h3>HSG-Messe und Spezialeinführung</h3>
+        </ion-card-content>
+    </ion-card>
+
+
+    <ion-card>
+        <img src="assets/imgs/events/xxx.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                HSG-Messe und Spezialeinführung
+
+            </ion-card-title>
             <p>Geile Gruppen und noch geilere Menschen warten auf euch! #seriös Die Spezialeinführung sollte niemand verpassen!
                 Bei den 212.982 Portalen wird es euch sonst schnell schwindelig.
                 <br> HSG Plan wird im Newsfeed geposted, da nicht rechtzeitig fertig
                 <a href="#" onclick="window.open('https://www.dropbox.com/sh/203coc57f0b90z3/AAA_n4uabrd_E2_1s-y08pzma?dl=0', '_system', 'location=yes'); return false;">Link zum Lageplan, hier klicken!</a>
             </p>
+        </ion-card-content>
+    </ion-card>
 
-        </div>
 
-        <div class="item item-text-wrap">
-            <h3>Elsass</h3>
+    <ion-card>
+        <img src="assets/imgs/events/franz.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                Elsass
+
+            </ion-card-title>
             <p>Kulinarischer Ausflug gefällig? #kulturmussauchmal Tipp: NICHT VORGLÜHEN und GRUNDLAGE!</p>
-        </div>
+        </ion-card-content>
+    </ion-card>
 
-        <div class="item item-text-wrap">
-            <h3>Weißwurstfrühstück</h3>
+
+    <ion-card>
+        <img src="assets/imgs/events/wurst.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                weißwurstfrühstück
+
+            </ion-card-title>
             <p>#solidarität und #kultureller #austausch mit unseren Brüdern im Osten... also nicht sooo krasser Osten... Bayern
-                eben.</p>
-        </div>
-
-        <div class="item item-text-wrap">
-            <h3>DisKAvery</h3>
-            <p>Neu in der Stadt? ja, nein? Egal. Die DisKAvery lohnt sich immer! Die Route findet ihr unter "Karte"!</p>
-        </div>
-
-        <div class="item item-text-wrap">
-            <h3>Thursdaynight</h3>
-            <p>#secret.</p>
-        </div>
-
-        <div class="item item-text-wrap">
-            <h3>Profcafé</h3>
-            <p>Profs mal ganz privat.</p>
-        </div>
-
-        <div class="item item-text-wrap">
-            <h3>Unirundgang</h3>
-            <p>#seriös Das Ding ist nicht sooo klein...glaubt mir... und kauft euch ein Fahrrad!</p>
-        </div>
-
-        <div class="item item-text-wrap">
-            <h3>FlippyCup-Turnier</h3>
-            <p>Ihr habt Skill an der Flasche und wollt eure Fähigkeiten auch am Plastikbecher beweisen? Dann ist das der richtige
-                Moment dafür!</p>
-        </div>
-
-        <div class="item item-text-wrap">
-            <h3>BaSta-Party</h3>
-            <p>Die #fetteste Party in Karlsruhe! Ungelogen.</p>
-        </div>
-
-        <div class="item item-text-wrap">
-            <h3>Flunky-Bowl</h3>
-            <p>Offizielles Trainingslager zur Flunkyball-WM im Winter. Aber nicht nur wer spielt wird hier gebraucht, jeder
-                wird auf seine Kosten kommen. #werkannzweizugtaktik? Hier das offizielle
-                <b>Regelwerk</b> plus Strafenkatalog zum Nachlesen:
-                <br>
-                <a href="#" onclick="window.open('https://drive.google.com/open?id=0B-q-CvgZoF78UWdxV0pWNzdPaUE', '_system', 'location=yes'); return false;">Link zum Flunkyball-Regelwerk, hier klicken!</a>
+                eben.
             </p>
+        </ion-card-content>
+    </ion-card>
 
-        </div>
-    </div>-->
+    <ion-card>
+        <img src="assets/imgs/events/maps.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                DisKAvery
+
+            </ion-card-title>
+            <p>Neu in der Stadt? ja, nein? Egal. Die DisKAvery lohnt sich immer! Die Route findet ihr unter "Karte"!</p>
+        </ion-card-content>
+    </ion-card>
+
+
+    <ion-card>
+        <img src="assets/imgs/events/question.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                Thursdaynight
+
+            </ion-card-title>
+            <p>#secret.</p>
+        </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+        <img src="assets/imgs/events/prof.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                Profcafé
+
+            </ion-card-title>
+            <p>#secret.</p>
+        </ion-card-content>
+        <p>Profs mal ganz privat.</p>
+    </ion-card>
+
+    <ion-card>
+        <img src="assets/imgs/events/question.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                Unirundgang
+            </ion-card-title>
+        </ion-card-content>
+        <p>#seriös Das Ding ist nicht sooo klein...glaubt mir... und kauft euch ein Fahrrad!</p>
+    </ion-card>
+
+
+    <ion-card>
+        <img src="assets/imgs/events/beer.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                Flunky Bowl
+            </ion-card-title>
+        </ion-card-content>
+        <p>Ihr habt Skill an der Flasche und wollt eure Fähigkeiten auch am Plastikbecher beweisen? Dann ist das der richtige
+            Moment dafür!</p>
+    </ion-card>
+
+    <ion-card>
+        <img src="assets/imgs/events/gaha.jpg" />
+        <ion-card-content>
+            <ion-card-title>
+                GaHa-Party
+            </ion-card-title>
+        </ion-card-content>
+        <h3>Die #fetteste Party in Karlsruhe! Ungelogen.</h3>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>&nbsp; </p>
+        <p>ungelogen.</p>
+    </ion-card>
+
+  
+
+
+   
 
 </ion-content>
