--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -105,7 +105,7 @@
 
 
     <ion-card>
-        <img src="assets/imgs/events/question.jpg" />
+        <img src="assets/imgs/events/karaoke.jpg" />
         <ion-card-content>
             <ion-card-title>
                 Karaoke
@@ -195,7 +195,7 @@
     </ion-card>
 
     <ion-card>
-        <img src="assets/imgs/events/question.jpg" />
+        <img src="assets/imgs/events/bib.jpg" />
         <ion-card-content>
             <ion-card-title>
                 Unirundgang
