gruppe backstage added

--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -808,4 +808,23 @@
         </ion-list>
     </div>
 
+    <div id="g25">
+        <h3 class="center">
+            Wichtige Ansprechpartner mit Nummer:
+        </h3>
+        <p></p>
+        <ion-list>
+            <ion-item class="center">
+                <b>Finn von Lauppert: Nerds </b>
+                <a href="tel:+49-163 7835433">+49 1637835433</a>
+            </ion-item>
+           
+            </ion-item>
+            <ion-item class="center">
+                <b>Wichtige Links:</b>
+
+            </ion-item>
+        </ion-list>
+    </div>
+
 </ion-content>
