Karaoke Live + Soundcloud

--- a/src/pages/graphs/graphs.html
+++ b/src/pages/graphs/graphs.html
@@ -29,6 +29,17 @@
 
 <ion-content padding>
 
+
+
+
+
+
+  <p> Wir brauchen Untermenüs !</p>
+  <p> Bierkonsum !</p>
+  <p> Schloga-Life</p>
+  <p> Karaoke Voting</p>
+  <p> Jodel dir einen</p>
+
    
 
     <iframe width="100%" height="250" src="https://live.amcharts.com/QzOTg/embed/" frameborder="0"></iframe>
@@ -39,4 +50,20 @@
 
     </iframe>
   </div>
+
+  <div>
+    <iframe src="http://etc.ch/T2th"
+      height="500" scrolling="auto" width="100%" frameBorder="0">
+<!-- Voting    -->
+    </iframe>
+  </div>
+  
+  <div>
+    <iframe src="https://directpoll.com/r?XDbzPBd3ixYqg8xnEPzeT5zC4le6wBZEeDtJU8bAi"
+      height="400" scrolling="auto" width="100%" frameBorder="0">
+<!-- Ergebnisse live    -->
+    </iframe>
+  </div>
+
+
 </ion-content>
