--- a/src/pages/infos/infos.html
+++ b/src/pages/infos/infos.html
@@ -104,7 +104,8 @@
             &nbsp;Kaufe den Nerds ein Bier!
         </a>
     </ion-list>
-
+    
+    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/457973181&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
     <button ion-button block (click)="logoutAlert()">Abmelden</button>
 
