--- a/src/pages/news-feed/news-feed.html
+++ b/src/pages/news-feed/news-feed.html
@@ -2,6 +2,7 @@
 
     <ion-navbar class="title">
         <ion-title>
+                <ion-icon name="heart"></ion-icon>
             &nbsp;&nbsp;KroKo-Phase
         </ion-title>
         <ion-buttons end>
