--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -7,7 +7,8 @@
 <ion-header>
 
     <ion-navbar>
-        <ion-title>KroKo-Phase</ion-title>
+        <ion-title><ion-icon name="heart"></ion-icon>
+            &nbsp;&nbsp;KroKo-Phase</ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="openMap()">
                 <ion-icon name="compass"></ion-icon>
