--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -31,7 +31,7 @@
 
 
     <ion-card>
-        <img src="assets/imgs/events/3.jpg" />
+        <img src="assets/imgs/events/krawatte.jpg" />
         <ion-card-content>
             <ion-card-title>
                 Begrüßung
@@ -189,7 +189,6 @@
                 Profcafé
 
             </ion-card-title>
-            <p>#secret.</p>
         </ion-card-content>
         <p>Profs mal ganz privat.</p>
     </ion-card>
@@ -238,18 +237,7 @@
         <p>&nbsp; </p>
         <p>&nbsp; </p>
         <p>&nbsp; </p>
-        <p>&nbsp; </p>
-        <p>&nbsp; </p>
-        <p>&nbsp; </p>
-        <p>&nbsp; </p>
-        <p>&nbsp; </p>
-        <p>&nbsp; </p>
-        <p>&nbsp; </p>
-        <p>&nbsp; </p>
-        <p>&nbsp; </p>
-        <p>&nbsp; </p>
-        <p>&nbsp; </p>
-        <p>&nbsp; </p>
+    
         <p>&nbsp; </p>
         <p>&nbsp; </p>
         <p>&nbsp; </p>
