added menus and cool stuff

--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -23,9 +23,9 @@
 
 
 
-    <ion-card>
-        <img src="assets/imgs/events/wochenplan.jpg" height="300" />
-    </ion-card>
+ 
+        <img src="assets/imgs/events/wochenplan.jpg" class="fullWidth"/>
+
 
 
 
