--- a/src/pages/graphs/graphs.html
+++ b/src/pages/graphs/graphs.html
@@ -31,39 +31,35 @@
 
 
 
+  <!--<ion-card class="css-style">
+    <ion-card-header>
+      Links
+    </ion-card-header>-->
 
 
+  <button ion-button block>Live</button>
+  <ion-list>
+    <button ion-item (click)="openBier()">
+      <ion-icon name="ios-beer-outline" item-start></ion-icon>
+      <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
+      Bierstatistik
+    </button>
 
-  <p> Wir brauchen Untermenüs !</p>
-  <p> Bierkonsum !</p>
-  <p> Schloga-Life</p>
-  <p> Karaoke Voting</p>
-  <p> Jodel dir einen</p>
+    <button ion-item (click)="openSchloga()">
+      <ion-icon name="ios-walk-outline" item-start></ion-icon>
+      <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
+      Schloga-Live
+    </button>
 
-   
+    <button ion-item (click)="openKaraoke()">
+      <ion-icon name="ios-microphone-outline" item-start></ion-icon>
+      <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
+      Karaoke-Voting
+    </button>
+  </ion-list>
 
-    <iframe width="100%" height="250" src="https://live.amcharts.com/QzOTg/embed/" frameborder="0"></iframe>
 
-  <div>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS-I3fxec0yXV4CCyJM6owVTvZaGKz6BZlb-rLakvm15Uvwf73UtW2sBwa1cbKB_7IGIlU9dcILOMrN/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"
-      height="500" scrolling="auto" width="100%" frameBorder="0">
-
-    </iframe>
-  </div>
-
-  <div>
-    <iframe src="http://etc.ch/T2th"
-      height="500" scrolling="auto" width="100%" frameBorder="0">
-<!-- Voting    -->
-    </iframe>
-  </div>
-  
-  <div>
-    <iframe src="https://directpoll.com/r?XDbzPBd3ixYqg8xnEPzeT5zC4le6wBZEeDtJU8bAi"
-      height="400" scrolling="auto" width="100%" frameBorder="0">
-<!-- Ergebnisse live    -->
-    </iframe>
-  </div>
-
+  <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/457973181&color=%23dbcd61&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+  <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/321103235&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 
 </ion-content>
