--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -14,22 +14,8 @@
     </ion-toolbar>
 
 </ion-header>
-<ion-content padding>
-
-
-
-
-
-
-
-
- 
-        <img src="assets/imgs/events/wochenplan.jpg" class="fullWidth"/>
-
-
-
-
-
+<ion-content>
+    <img src="assets/imgs/events/wochenplan.jpg" class="fullWidth" />
     <ion-card>
         <img src="assets/imgs/events/krawatte.jpg" />
         <ion-card-content>
@@ -237,16 +223,16 @@
         <p>&nbsp; </p>
         <p>&nbsp; </p>
         <p>&nbsp; </p>
-    
+
         <p>&nbsp; </p>
         <p>&nbsp; </p>
         <p>&nbsp; </p>
         <p>ungelogen.</p>
     </ion-card>
 
-  
 
 
-   
+
+
 
 </ion-content>
