--- a/src/pages/karte/karte.html
+++ b/src/pages/karte/karte.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
   <div class="item item-text-wrap">
     <p>Hier findet Ihr eine dicke Karte mit allen wichtigen Spots für die O-Phasen-Abendevents und die DisKAvery. Außerdem haben wir einige megageheime Geheimtipps für Euch gesammelt, mit denen Ihr Euch im Karlsruher #baustellenjungle besser zurechtfindet!</p>
     <SMALL>Tipp: Auf das Symbol links oben klicken, um verschiedene Kategorien auszuwählen! Einfach mal ausprobieren!</SMALL>
