--- a/src/pages/news-feed/news-feed.html
+++ b/src/pages/news-feed/news-feed.html
@@ -2,7 +2,7 @@
 
     <ion-navbar class="title">
         <ion-title>
-                <ion-icon name="heart"></ion-icon>
+            <ion-icon name="heart"></ion-icon>
             &nbsp;&nbsp;KroKo-Phase
         </ion-title>
         <ion-buttons end>
@@ -19,18 +19,11 @@
 </ion-header>
 
 
-<ion-content padding>
-
-
-
-
-
-
-
+<ion-content>
     <div>
         <iframe src="http://o-phase.de/app/newsfeed/O-Phase%20Newsfeed" height="1000" scrolling="auto" width="100%" frameBorder="0">
 
         </iframe>
     </div>
-   
+
 </ion-content>
