--- a/src/pages/karaoke/karaoke.html
+++ b/src/pages/karaoke/karaoke.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
   <div>
     <iframe src="http://etc.ch/T2th" height="500" scrolling="auto" width="100%" frameBorder="0">
       <!-- Voting    -->
