--- a/src/pages/bier/bier.html
+++ b/src/pages/bier/bier.html
@@ -13,6 +13,6 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
   <iframe width="100%" height="250" src="https://live.amcharts.com/QzOTg/embed/" frameborder="0"></iframe>
 </ion-content>
