--- a/src/pages/schloga/schloga.html
+++ b/src/pages/schloga/schloga.html
@@ -8,8 +8,12 @@
 
   <ion-navbar>
     <ion-title>Schloga-Live</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="refresh()">
+        <ion-icon name="md-refresh"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 
