--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -15,7 +15,7 @@
 
 </ion-header>
 <ion-content>
-    <img src="assets/imgs/events/wochenplan.jpg" class="fullWidth" />
+    <img src="assets/imgs/events/wochenplan.jpg" style="margin-top: 3%;"/>
     <ion-card>
         <img src="assets/imgs/events/krawatte.jpg" />
         <ion-card-content>
