--- a/src/pages/infos/infos.html
+++ b/src/pages/infos/infos.html
@@ -30,7 +30,7 @@
     <ion-list>
         <a ion-item href="https://instagram.com/filmteam2k18?utm_source=ig_profile_share&igshid=xplh4rlsg4jz">
             <ion-icon name="camera"></ion-icon>
-            &nbsp;FILMTEAM STORYS (abonieren)
+            &nbsp;FILMTEAM STORYS (abonieren!)
         </a>
     </ion-list>
 
