--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -830,9 +830,34 @@
                     <b>Kai: </b>
                     <a href="tel:0174 3010313">0174 3010313</a>
                 </ion-item>
+                <ion-item class="center">
+                        <b>Mirco Leinen: </b>
+                        <a href="tel:0172 7726026">0172 7726026</a>
+                    </ion-item>
+                    <ion-item class="center">
+                        <b>Vera Meinert: </b>
+                        <a href="tel:01794377172">01794377172</a>
+                    </ion-item>
+                    <ion-item class="center">
+                        <b>Techmi GAHA/Begrüßung </b>
+                        <a href="tel:0177 1981715">0177 1981715</a>
+                    </ion-item>
+                    <ion-item class="center">
+                        <b>Techmi Karaoke/Flunky </b>
+                        <a href="tel:0174 8418504">0174 8418504</a>
+                    </ion-item>
+                   
+                <ion-item class="center">
+                            <b>Techmi HSG/Thirsday </b>
+                            <a href="tel:0152 23621115">0152 23621115</a>
+                        </ion-item>
+                        <ion-item class="center">
+                            <b>Fachschaft</b>
+                            <a href="tel:0721 60843806">0721 60843806</a>
+                        </ion-item>
             </ion-list>
 
-        <p></p>
+        <p> ETL's siehe Tutorenbiebel (link!)</p>
 
         <button ion-button block (click)="logoutAlert()">Abmelden</button>
            
