--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -857,7 +857,7 @@
                         </ion-item>
             </ion-list>
 
-        <p> ETL's siehe Tutorenbiebel (link!)</p>
+        <h4> ETL's siehe Tutorenbiebel (link!)</h4>
 
         <button ion-button block (click)="logoutAlert()">Abmelden</button>
            
