--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -814,44 +814,44 @@
             Wichtige Ansprechpartner mit Nummer:
         </h3>
         <ion-list>
-                <ion-item class="center">
+                <ion-item >
                     <b>Sammy: </b>
                     <a href="tel:0176 52983374">0176 52983374</a>
                 </ion-item>
-                <ion-item class="center">
+                <ion-item >
                     <b>Marieke: </b>
                     <a href="tel:0157 77330329">0157 77330329</a>
                 </ion-item>
-                <ion-item class="center">
+                <ion-item >
                     <b>Caro: </b>
                     <a href="tel:0157 55509960">0157 55509960</a>
                 </ion-item>
-                <ion-item class="center">
+                <ion-item >
                     <b>Kai: </b>
                     <a href="tel:0174 3010313">0174 3010313</a>
                 </ion-item>
-                <ion-item class="center">
+                <ion-item >
                         <b>Mirco Leinen: </b>
                         <a href="tel:0172 7726026">0172 7726026</a>
                     </ion-item>
-                    <ion-item class="center">
+                    <ion-item >
                         <b>Vera Meinert: </b>
                         <a href="tel:01794377172">01794377172</a>
                     </ion-item>
-                    <ion-item class="center">
+                    <ion-item >
                         <b>Techmi GAHA/Begrüßung </b>
                         <a href="tel:0177 1981715">0177 1981715</a>
                     </ion-item>
-                    <ion-item class="center">
+                    <ion-item >
                         <b>Techmi Karaoke/Flunky </b>
                         <a href="tel:0174 8418504">0174 8418504</a>
                     </ion-item>
                    
-                <ion-item class="center">
+                <ion-item >
                             <b>Techmi HSG/Thirsday </b>
                             <a href="tel:0152 23621115">0152 23621115</a>
                         </ion-item>
-                        <ion-item class="center">
+                        <ion-item >
                             <b>Fachschaft</b>
                             <a href="tel:0721 60843806">0721 60843806</a>
                         </ion-item>
