--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -810,9 +810,10 @@
     </div>
 
     <div id="g25">
-        <h3 class="center">
+        <h5 class="center">
             Wichtige Ansprechpartner mit Nummer:
-        </h3>
+        </h5>
+        <a href="#" onclick="window.open('https://drive.google.com/file/d/1nN4pFcgngyElNHYyYQXt9c90DZio2TC_/view', '_system', 'location=yes'); return false;">Link zur Tutorenbibel, hier klicken!</a>
         <ion-list>
                 <ion-item >
                     <b>Sammy: </b>
@@ -857,9 +858,8 @@
                         </ion-item>
             </ion-list>
 
-        <h4> ETL's siehe Tutorenbiebel (link!)</h4>
+        <h4> ETL's siehe Tutorenbibel</h4>
 
-        <button ion-button block (click)="logoutAlert()">Abmelden</button>
            
           
            <ion-item class="center">
