fixes and breakfsat rooms

--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -71,9 +71,9 @@
         <ion-card-content>
             <ion-card-title>
                 Gruppenfrühstück
-
             </ion-card-title>
-            <p>Kater? bestimmt nicht, Du hast doch sicher nie aufgehört zu feiern und zu trinken! Pünktlichkeit ist Pflicht.</p>
+            <p>Kater? Bestimmt nicht, du hast doch sicher nie aufgehört zu feiern und zu trinken!</p>
+            <p>Pünktlichkeit ist Pflicht.</p>
 
         </ion-card-content>
     </ion-card>
@@ -139,7 +139,7 @@
         <img src="assets/imgs/events/wurst.jpg" />
         <ion-card-content>
             <ion-card-title>
-                weißwurstfrühstück
+                Weißwurstfrühstück
 
             </ion-card-title>
             <p>#solidarität und #kultureller #austausch mit unseren Brüdern im Osten... also nicht sooo krasser Osten... Bayern
